# src/main/kotlin/org/mycompany/hris/performancereview/model/PerformanceReviewHistoryResponse.kt
@@ -1,0 +1,7 @@
+package org.mycompany.hris.performancereview.model
+
+data class PerformanceReviewHistoryResponse(
+    val reviews: List<EmployeePerformanceReview>,
+    val limit: Int,
+    val offset: Long,
+)
